Mon Dec 16 17:20:02 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkaccellabel.c: Implement Owen's susggestion from
	#80764. Fixes #101314.

Sun Dec 15 18:47:30 2002  Owen Taylor  <otaylor@redhat.com>

	Some fixes for modal hint setting based on a patch
	from Arvind Samptur (#100416)

	* gtk/gtkdialog.c (gtk_dialog_run): Call gtk_window_set_modal
	before showing the window for efficiency.

	* gtk/gtkwindow.c (gtk_window_realize): Ignore the EWMH
	constraint that the transient-for hint must always be
	set on windows with the modal hint and just always set
	the modal hint.

	* gtk/gtkwindow.c (gtk_window_set_modal): Update the
	modal hint on the GdkWindow when the window is realized.

Sun Dec 15 18:39:09 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Hard-code GTK_BINARY_VERSION=2.2.0 for
	now; should stay the same until we branch for 2.3. (#100598)

Sun Dec 15 18:14:16 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenuitem.c (gtk_real_menu_item_activate_item): 
	Pass TRUE for search_sensitive - prevents a problem
	where after hitting Alt-F to bring up the File menu,
	the mnemonics for the items in the menu might not
	be usable. (#89336)

Sat Dec 14 22:18:45 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents):
	Fix a bug with checking the private flag on the wrong
	window; improve the answer on failure a bit; push
	an error trap around the X operations. (#100933)

Sat Dec 14 22:03:21 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c (status_window_hide): Don't
	call status_window_set_text() if the status window doesn't
	already exist. (#100933, reported by Anand Subra)

	* modules/input/gtkimcontextxim.c (status_window_show): 
	Don't bother creating the status window here, wait for
	the set_text(). (Fixes a warning)

2002-12-15  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c:
	* gtk/gtkfilesel.c:
	* gtk/gtkfontsel.c:
	* gtk/gtkhruler.c:
	* gtk/gtkinputdialog.c: